2024-05-12  vaiorabbit  <http://twitter.com/vaiorabbit>

	* Updated with latest raylib ( https://github.com/raysan5/raylib/commit/f62202198e35161a9fe394a14bbd1a7c655107ad ) and raygui ( https://github.com/raysan5/raygui/commit/12804826d01bfb636e36f816bda19eaa23b4ace7 )

2024-05-04  vaiorabbit  <http://twitter.com/vaiorabbit>

	* Updated with latest raylib ( https://github.com/raysan5/raylib/commit/f1007554a0a8145060797c0aa8169bdaf2c1c6b8 ) and raygui ( https://github.com/raysan5/raygui/commit/a3a0e86e215145c28726e6f469f13d0aa6647a5e )

2024-04-27  vaiorabbit  <http://twitter.com/vaiorabbit>

	* Updated with latest raylib ( https://github.com/raysan5/raylib/commit/e47ebec66134800e734710038ea4e5f070f3ef06 ) and raygui ( https://github.com/raysan5/raygui/commit/6f532337ff2d6dc14ba3a5f5b7ee63f9d90ff13b )

2024-04-06  vaiorabbit  <http://twitter.com/vaiorabbit>

	* Updated with latest raylib ( https://github.com/raysan5/raylib/commit/414229bcf93816daaa253a82cd54fbd7b18e6449 ) and raygui ( https://github.com/raysan5/raygui/commit/0a9a9f897a16968444e10fea4fbac33ba1d5d640 )

2024-03-31  vaiorabbit  <http://twitter.com/vaiorabbit>

	* examples/textures_bunnymark_plain.rb : Renamed from textures_bunnymark.rb
	* examples/textures_bunnymark_optimized.rb : Added

2024-03-24  vaiorabbit  <http://twitter.com/vaiorabbit>

	* Updated with latest raylib ( https://github.com/raysan5/raylib/commit/35252fceefdeb7b0920d9c1513efb4b5c05633dc ) and raygui ( https://github.com/raysan5/raygui/commit/9060e3bf33795dad4fdb4f60585b07901ffa5dee )

2024-03-10  vaiorabbit  <http://twitter.com/vaiorabbit>

	* Updated with latest raylib ( https://github.com/raysan5/raylib/commit/f072497551d9f03b5fbded289f8af021c103a8c0) and raygui ( https://github.com/raysan5/raygui/commit/623bc61f29839d451061252e1cc93edb013c2f8c )

2024-03-02  vaiorabbit  <http://twitter.com/vaiorabbit>

	* Updated with latest raylib ( https://github.com/raysan5/raylib/commit/25caf14be8d0284aceaa0de28753b3012e71b7bb )
