@@ -20,6 +20,12 @@ if __name__ == "__main__":
         'RL_MAX_SHADER_LOCATIONS',
         'RL_CULL_DISTANCE_NEAR',
         'RL_CULL_DISTANCE_FAR',
+        'RL_DEFAULT_SHADER_ATTRIB_LOCATION_POSITION',
+        'RL_DEFAULT_SHADER_ATTRIB_LOCATION_TEXCOORD',
+        'RL_DEFAULT_SHADER_ATTRIB_LOCATION_NORMAL',
+        'RL_DEFAULT_SHADER_ATTRIB_LOCATION_COLOR',
+        'RL_DEFAULT_SHADER_ATTRIB_LOCATION_TANGENT',
+        'RL_DEFAULT_SHADER_ATTRIB_LOCATION_TEXCOORD2',
     ]
     for key in omit_macros:
         ctx.decl_macros.pop(key, None)
